# NewTetrisGraph

./: CMakeLists.txt  Figura.cpp  Figura.h  Joc.cpp  Joc.h  README.md  Tauler.cpp  Tauler.h  license.txt  main.cpp
